Closed
Bug 222300
Opened 22 years ago
Closed 22 years ago
Resizing Mozilla window past end of web page causes rendering artifacts
Categories
(Core :: Web Painting, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bugzilla, Assigned: roc)
References
()
Details
Attachments
(3 files)
85.17 KB,
image/jp2
|
Details | |
21.15 KB,
image/jpeg
|
Details | |
738 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
dbaron
:
approval1.6+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.5) Gecko/20031007
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.5) Gecko/20031007
I noticed this bug right off when opening Mozilla 1.5 for OS X. I resized the
window to better fill my monitor space, and when it went past the end of the
webpage, I got scroll bar and "E-Mail CVS" etc link artifacts, which are not
"active" below the rest of the active working webpage. I was able to quit and
start over, same problem. This is especially evident if you move the window
around slightly eratically, say when you reach the end of your mousepad and need
to pickup and start over, the window gets moved in and out of the end of the
pre-rendered webpage before it is able to catch up on rendering. Scrolling back
up and then down will repaint this section of misrendered page.
I didn't find any bugs which seemed to describe this specifically, however Bug
#30125 seemed to be similar.
Reproducible: Always
Steps to Reproduce:
1. Open Mozilla 1.5 to default start page.
2. Re-size past the end of the page a few times. Try using slightly circular
motions going in and out of the end of the page view.
3. Scrolling up and back down will repaint this area with proper content.
Actual Results:
I got artifacts from the surrounding end of page, and scroll bar. I have a
screen shot of this.
Expected Results:
A re-rendered page to take up the new window size, or "grey" area.
Reporter | ||
Comment 1•22 years ago
|
||
Problem is noticable in the lower right corner of screen.
The red dot plus white bar across the bottom right of screen shot is unrelated
to Mozilla (Codetek Virtual Desktop).
Assignee | ||
Comment 2•22 years ago
|
||
OSX only?
Reporter | ||
Comment 3•22 years ago
|
||
Have not had a chance to test on Win32 or Linux, the mirrors are a tad sluggish
right now. Will post a new comment when I can try Win32 or Linux.
Comment 4•22 years ago
|
||
I can confirm this problem on Mac OS X. I believe it's OS X only because I don't
see it on windows. If you scroll to the bottom of the page and resize the
window, it doesn't repaint but just ads a bunch of empty (background color?)
space under and to the right of the content. With just the right resizing I can
make the entire content area disappear.
Steps to reproduce:
1. open http://mozilla.org/
2. scroll to bottom of page.
3. drag the resizer widget to expand the window.
Results: the content area doesn't repaint, leaving behind either blank space or
remnants of the browser chrome (scrollbars and statusbar).
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 5•22 years ago
|
||
This is very similar to bug 201435.
![]() |
||
Comment 7•22 years ago
|
||
Attachment #138909 -
Flags: superreview+
Attachment #138909 -
Flags: review+
Attachment #138909 -
Flags: approval1.6+
![]() |
||
Comment 8•22 years ago
|
||
fix checked in on trunk and MOZILLA_1_6_BRANCH.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Was this actually a dup of bug 210250?
![]() |
||
Comment 10•22 years ago
|
||
*** Bug 203467 has been marked as a duplicate of this bug. ***
![]() |
||
Comment 11•22 years ago
|
||
*** Bug 210250 has been marked as a duplicate of this bug. ***
Comment 12•22 years ago
|
||
I think this was a problem in 1.4.1 also. If there going to be a 1.4.2, this
ought to get checked in there, as well.
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•