fix content area not redrawing when resizing the window on Mac.  bug 222300, r+sr=dbaron.